--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
